[gd_scene load_steps=3 format=2]

[ext_resource path="res://Levels/Level78/Level78.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level78/Level7.tscn" type="PackedScene" id=2]

[node name="Level78" type="Node2D"]
script = ExtResource( 1 )

[node name="SubLevel" type="Node" parent="."]

[node name="Level7" parent="SubLevel" instance=ExtResource( 2 )]

[connection signal="load_eight" from="SubLevel/Level7" to="." method="load_eight"]
